# trustworthy-experiments-core

./: CHANGELOG.md  FEEDBACK_TEMPLATE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  golden_update.yaml  golden_update_sequential.yml
ci/: golden_update.py  golden_verify.py  verify_bundle.py  verify_causal_contract.py
configs/ci/: sequential_mean_ci.yaml  (+1 more)
examples/: README.md  example_ratio.csv  example_ts.csv  example_ts_long.csv  example_user_level.csv
notebooks/: 01_power_analysis_arpu_cr.ipynb  02_metric_design_b2c.ipynb  03_experiment_design_tradeoffs.ipynb  04_synthetic_b2c_data_generator.ipynb  05_benchmark_arpu_vs_ratio_linearization.ipynb  06_cuped_variance_reduction.ipynb  07_cuped_on_arpu_with_outliers.ipynb  08_prepare_time_series_for_causal.ipynb  09_causal_impact_like_time_series.ipynb  10_synthetic_control_donor_mode.ipynb  10_synthetic_control_for_campaigns.ipynb  11_diff_in_diff_panel_minimal.ipynb  12_causal_impact_failure_modes.ipynb  13_placebo_and_sensitivity.ipynb  14_sequential_intro_peeking_vs_valid.ipynb  15_group_sequential_boundaries_pocock_obf.ipynb  16_confidence_sequences_anytime_valid.ipynb  17_sequential_ratio_linearized.ipynb  18_sequential_failure_modes_and_guardrails.ipynb
schemas/: timeseries_causal_impact.yaml
scripts/: build_out.py  generate_synthetic_ts.py  run_impact.py  run_synthetic_control.py
tests/: test_causal_impact_like.py  test_sequential_cs.py  test_sequential_group.py  test_sequential_ratio.py  test_synth_control_and_did.py
(+92 files in other folders)
