[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustworthy-experiments-core"
version = "0.1.0"
description = "Core utilities for trustworthy online experimentation in data-driven B2C businesses."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Niuh"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.3",
]

[project.scripts]
tecore = "tecore.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
